--- a/agro/styles_farmer.css
+++ b/agro/styles_farmer.css
@@ -9,26 +9,22 @@
 body {
     font-family: Arial, sans-serif;
     background-image: url('farmer1BGimage.png');
- 
     background-size:cover;
-    background-position: bottom;
+    background-position: top center;
     background-repeat: no-repeat;
 }
 
 .container {
-    
+    /* background-color: red; */
     width: 700px;
-    margin: 0px 0px 0px 550px;
-    padding: 20px;
+    margin: 0px 0px 0px 803px;
+    padding: 2px;
 }
 
 header {
-    
-   
     color:black ;
     padding: 20px;
-    text-align: center;
-    
+    text-align: center; 
 }
 
 header h1 {
@@ -43,7 +39,6 @@ button {
     padding: 10px 20px;
     font-size: 16px;
     position:relative;
-    
     margin: 10px;
     cursor: pointer;
     opacity: 1;
