fixed button positions

--- a/agro/farmer_website/styles_farmer.css
+++ b/agro/farmer_website/styles_farmer.css
@@ -54,9 +54,13 @@ button {
 
 #btn1{
     width: 150px;
+    position:absolute;
+    right: 465px;
 }
 #btn2{
     width: 250px;
+    position:absolute;
+    right: 200px;
 }
 #btn3{
     width: 150px;
